fix(cors): permitir *.vercel.app y *.somosayni.com (#2)
Co-authored-by: Raúl Bustamante <raul@bustamante.me>